<resources>
    <string name="app_name">Course Street</string>

    <!--menu-->
    <string name="menu_forum">Forum</string>
    <string name="menu_store">Store</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">testemail@gmail.com</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="forum_text">Forum</string>
    <string name="postquestion_text">Post Question</string>
    <string name="answered_txt">Answered</string>
    <string name="unanswered_txt">Unanswered</string>
    <string name="ask_question">Ask a question!</string>
    <string name="title_help">Title</string>
    <string name="question_help">Question</string>
    <string name="post_help">Post</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="confirmPass">Confirm Password: </string>
    <string name="name">Name: </string>
    <string name="oldPassword">Old Password: </string>
    <string name="newPassword">New Password: </string>
    <string name="newConfirmPass">Confirm New Password: </string>
    <string name="photo">Profile Photo: </string>
    <string name="highest_qualification">Highest qualification of study</string>
    <string name="spinner_description">contains a list of qualifications</string>
    <string name="spinner_interests">contains a list of field of interests</string>
    <string name="spinner_subjects">contains a list of subjects</string>
    <string name="spinner_grades">contains a list of grades</string>
    <string name="academic_qualifications">Academic Qualifications</string>
    <string name="field_of_interest">Field of interest</string>
    <string name="submit">Find suitable universities</string>
    <string name="subject">Subject</string>
    <string name="grade">Grade</string>

    <string-array name="qualification_array">
        <item>-</item>
        <item>SPM</item>
        <item>A-Levels</item>
        <item>STPM</item>
        <item>UEC</item>
        <item>Diploma</item>
    </string-array>

    <string-array name="field_of_interest_array">
        <item>-</item>
        <item>Computing and IT</item>
        <item>Accounting and Finance</item>
        <item>Arts and Design</item>
        <item>Engineering</item>
        <item>Business</item>
        <item>Communication and Social Science</item>
        <item>Built Environment</item>
        <item>Hospitality and Tourism</item>
        <item>Health Science</item>
        <item>Design</item>
    </string-array>

    <string-array name="grades_array">
        <item>-</item>
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>G</item>
        <item>X</item>
    </string-array>

    <string-array name="subjects_array">
        <item>-</item>
        <item>Bahasa Melayu</item>
        <item>Bahasa Inggeris</item>
        <item>Pendidikan Moral</item>
        <item>Pendidikan Islam</item>
        <item>Sejarah</item>
        <item>Mathematics</item>
        <item>Additional Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Science</item>
        <item>Principle of Accounting</item>
        <item>Economics</item>
    </string-array>


</resources>