<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:checkable="true"
        android:icon="@drawable/vector_home"
        android:title="@string/menu_home" />

    <group android:id="@+id/activity">
        <item
            android:id="@+id/forumFragment"
            android:checkable="true"
            android:icon="@drawable/vector_chat"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/storeFragment"
            android:checkable="true"
            android:icon="@drawable/vector_store"
            android:title="@string/menu_store" />

    </group>

    <item
        android:id="@+id/profileFragment"
        android:checkable="true"
        android:icon="@drawable/vector_account"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="Logout" />


</menu>