<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.resultsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="660dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highest_qualification"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_qualification"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:contentDescription="@string/spinner_description"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView_field_of_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_of_interest"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_field_of_interest"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:contentDescription="@string/spinner_interests" />

            <TextView
                android:id="@+id/textView_academic_qualifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/academic_qualifications"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_subject"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_grade"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_1"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_1"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_2"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_2"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_3"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_3"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_4"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_4"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_5"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_5"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_6"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_6"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_7"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_7"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_8"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_8"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_9"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_9"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_10"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_10"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_11"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_11"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_academic_12"
                    android:layout_width="198dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_subjects" />

                <Spinner
                    android:id="@+id/spinner_grade_12"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_grades" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>