<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileEditPasswordFragment">


    <EditText
        android:id="@+id/edtProfileOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtProfileNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtProfileConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnPasswordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Reset"
        app:layout_constraintStart_toStartOf="@+id/edtProfileConfirmNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileConfirmNewPassword" />

    <Button
        android:id="@+id/btnPasswordSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="@+id/edtProfileConfirmNewPassword"
        app:layout_constraintStart_toEndOf="@+id/btnPasswordReset"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileConfirmNewPassword" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edtProfileOldPassword"
        android:text="@string/oldPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/edtProfileNewPassword"
        android:text="@string/newPassword"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtProfileOldPassword"
        app:layout_constraintStart_toStartOf="@+id/edtProfileOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileOldPassword" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/edtProfileConfirmNewPassword"
        android:text="@string/newConfirmPass"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtProfileNewPassword"
        app:layout_constraintStart_toStartOf="@+id/edtProfileNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileNewPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="156dp" />


</androidx.constraintlayout.widget.ConstraintLayout>